style: modify css

--- a/src/components/InvitationCode/style.scss
+++ b/src/components/InvitationCode/style.scss
@@ -42,7 +42,7 @@
       margin: 0;
       text-align: center;
       font-size: 28px;
-      color: #20064a;
+      color: #1c064b;
       letter-spacing: 2px;
     }
     .input {
