fix: add non-audio tag support warn

--- a/src/components/Countdown/style.scss
+++ b/src/components/Countdown/style.scss
@@ -4,6 +4,7 @@
   background: #fff url("../../assets/countdown/countdown-background.png") no-repeat center center;
   background-size: 100% 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items:  center;
   .countdown-img {
