style: modify css and router name

--- a/src/components/ScrollMessage/style.scss
+++ b/src/components/ScrollMessage/style.scss
@@ -2,7 +2,7 @@
   transform: translateY(-100%);
   transition: all 1s;
 }
-.container {
+.scroll-message {
   margin: 0;
   padding: 0;
   height: 100%;
