--- a/src/components/SharePage/style.scss
+++ b/src/components/SharePage/style.scss
@@ -14,7 +14,7 @@
   letter-spacing: 2px;
 }
 .title {
-  margin: 0;
+  margin: 0 20px;
   font-size: 16px;
   text-align: center;
   color: #575757;
