--- a/src/components/PromptBox/style.scss
+++ b/src/components/PromptBox/style.scss
@@ -9,9 +9,11 @@
   bottom: 13%;
   left: 50%;
   transform: translateX(-50%);
-  padding: 15px 13px;
+  padding: 10px 14px;
   border-radius: 3px;
   font-size: 12px;
+  line-height: 22px;
+  text-align: center;
   color: #eee;
   background-color: #666;
   z-index: 1;
