--- a/src/pages/Quiz/style.scss
+++ b/src/pages/Quiz/style.scss
@@ -41,6 +41,7 @@
     list-style: none;
     li {
       margin: 20px 0;
+      padding: 0;
       width: 100%;
       height: 44px;
       line-height: 44px;
@@ -50,5 +51,52 @@
       color: #333;
       background-color: #f8f8f8;
     }
+    .wrong {
+      background: linear-gradient(to right, #ff9608, #f7ce4d) no-repeat;
+      background-size: 100% 100%;
+    }
+    .right {
+      background: linear-gradient(to right, #439421, #b0e94f);
+    }
+    .slide-enter-active {
+      &:nth-child(1) {
+        transition: all .8s;
+      }
+      &:nth-child(2) {
+        transition: all .8s .1s;
+      }
+      &:nth-child(3) {
+        transition: all .8s .2s;
+      }
+      &:nth-child(4) {
+        transition: all .8s .3s;
+      }
+      &:nth-child(5) {
+        transition: all .8s .4s;
+      }
+    }
+    .slide-leave-active {
+      transition: all 0.5s;
+    }
+    .slide-enter {
+      opacity: 0;
+      transform: translateX(20%);
+    }
+    .slide-leave {
+      opacity: 0;
+    }
+  }
+  .slide-enter-active {
+      transition: all 1s;
+  }
+  .slide-leave-active {
+    transition: all 0.5s;
+  }
+  .slide-enter {
+    opacity: 0;
+    transform: translateX(10%);
+  }
+  .slide-leave {
+    opacity: 0;
   }
 }
