fix: imporve answer question process

--- a/src/components/PromptBox/style.scss
+++ b/src/components/PromptBox/style.scss
@@ -1,5 +1,5 @@
 .fade-enter-active, .fade-leave-active {
-  transition: all 0.5s;
+  transition: all .5s;
 }
 .fade-enter, .fade-leave-to {
   opacity: 0;
