--- a/src/components/SharePage/style.scss
+++ b/src/components/SharePage/style.scss
@@ -44,7 +44,7 @@
     width: 56px;
     height: 56px;
     border-radius: 28px;
-    box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
+    box-shadow: 2px 2px 8px rgba(0, 0, 0, .1);
     img {
       width: 32px;
       height: 32px;
