--- a/src/components/PopupModal/style.scss
+++ b/src/components/PopupModal/style.scss
@@ -1,5 +1,5 @@
 .slide-fade-enter-active, .slide-fade-leave-active {
-  transition: all 0.3s;
+  transition: all .3s;
 }
 .slide-fade-enter, .slide-fade-leave-to {
   transform: translateY(50%);
