--- a/src/components/RulesPage/style.scss
+++ b/src/components/RulesPage/style.scss
@@ -1,5 +1,5 @@
 .slide-fade-enter-active, .slide-fade-leave-active {
-  transition: all 0.2s;
+  transition: all .2s;
 }
 .slide-fade-enter, .slide-fade-leave-to {
   transform: translateY(100%);
