--- a/src/pages/HomePage/style.scss
+++ b/src/pages/HomePage/style.scss
@@ -37,14 +37,14 @@
     margin: auto;
     background-color: #fff;
     border-radius: 8px;
-    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, .3);
     // 头像
     .avatar {
       margin-top: 14px;
       width: 48px;
       height: 48px;
       border-radius: 24px;
-      box-shadow: 0 3px 6px rgba(0, 0, 0, 0.3);
+      box-shadow: 0 3px 6px rgba(0, 0, 0, .3);
     }
     // 剩余游戏次数和奖金
     .text-info {
@@ -92,7 +92,7 @@
         width: 100%;
         height: 100%;
         line-height: 30px;
-        border: 0.1em solid #00152c;
+        border: .1em solid #00152c;
         border-radius: 15px;
         display: flex;
         flex-direction: row;
@@ -138,7 +138,7 @@
         display: flex;
         flex-direction: column;
         line-height: 15px;
-        font-size: 0.7em;
+        font-size: .7em;
       }
     }
     // 限时答题活动预告
@@ -211,7 +211,7 @@
     position: fixed;
     top: 0;
     left: 0;
-    background-color: rgba(0, 0, 0, 0.3);
+    background-color: rgba(0, 0, 0, .3);
     z-index: 1;
   }
 }
