--- a/src/components/ResultPage/style.scss
+++ b/src/components/ResultPage/style.scss
@@ -1,3 +1,9 @@
+.slide-up-enter-active, .slide-up-leave-active {
+  transition: all .8s;
+}
+.slide-up-enter, .slide-up-leave-to {
+  transform: translateY(100%);
+}
 .result-page {
   width: 100%;
   height: 100vh;
@@ -12,10 +18,10 @@
   align-items: center;
   .back-btn {
     position: absolute;
-    top: 6px;
-    left: 6px;
-    width: 28px;
-    height: 28px;
+    top: 12px;
+    left: 12px;
+    width: 14px;
+    height: 14px;
   }
   .result-img {
     margin-top: 20vh;
@@ -35,6 +41,10 @@
     font-size: 14px;
     line-height: 20px;
     text-align: center;
+    .score {
+      color: #1f3085;
+      font-weight: 600;
+    }
   }
   .tip {
     margin-top: 16px;
