--- a/src/components/ResultPage/style.scss
+++ b/src/components/ResultPage/style.scss
@@ -46,6 +46,15 @@
       font-weight: 600;
     }
   }
+  .btn {
+    width: 100%;
+    height: 100%;
+    color: #fff;
+    text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
   .tip {
     margin-top: 16px;
     font-size: 12px;
