--- a/src/pages/Quiz/style.scss
+++ b/src/pages/Quiz/style.scss
@@ -7,7 +7,7 @@
   .header {
     width: 100%;
     height: 30vh;
-    background: #add5f8 url("../../assets/quiz-background.png") no-repeat center center;
+    background: #f6f6f6 url("../../assets/quiz-background.png") no-repeat center center;
     background-size: 100% 100%;
   }
   .background{
@@ -33,6 +33,7 @@
     border-radius: 50%;
     box-sizing: border-box;
     border: 5px solid #fff;
+    background-color: #fff;
     z-index: 1;
   }
   .path {
