fix: adjust close buttons' size

--- a/src/components/RankingList/style.scss
+++ b/src/components/RankingList/style.scss
@@ -23,9 +23,10 @@ $themeColor: #3c1860;
     top: 0;
     .close-icon {
       position: absolute;
+      top: 16px;
       left: 16px;
-      width: 12px;
-      height: 12px;
+      width: 14px;
+      height: 14px;
     }
     .heading {
       margin: 0 auto;
