--- a/src/components/RulesPage/style.scss
+++ b/src/components/RulesPage/style.scss
@@ -22,9 +22,10 @@
     top: 0;
     .close-icon {
       position: absolute;
-      left: 10px;
-      width: 12px;
-      height: 12px;
+      top: 12px;
+      left: 12px;
+      width: 14px;
+      height: 14px;
     }
     .heading {
       margin: 0 auto;
