fix: fixed bug that can't go back when click background

--- a/src/pages/HomePage/style.scss
+++ b/src/pages/HomePage/style.scss
@@ -15,7 +15,7 @@
   // 头部按钮
   .head-btn {
     position: absolute;
-    top: 24%;
+    top: 24vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -41,7 +41,7 @@
     align-items: center;
     position: relative;
     width: 88%;
-    height: 400px;
+    height: 60vh;
     margin: auto;
     background-color: #fff;
     border-radius: 8px;
@@ -164,7 +164,7 @@
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
-    bottom: 15px;
+    bottom: 3vh;
     color: #fff;
     font-size: 12px;
     display: flex;
