--- a/src/pages/Quiz/style.scss
+++ b/src/pages/Quiz/style.scss
@@ -6,17 +6,17 @@
   align-items: center;
   .header {
     width: 100%;
-    height: 24vh;
+    height: 36vw;
     background: #f6f6f6 url("../../assets/quiz-background.png") no-repeat center center;
     background-size: 100% 100%;
   }
   .background{
-    margin-top: -63px;
+    margin-top: -68px;
     width: 0;
     height: 0;
-    border-left: 48px solid transparent;
-    border-right: 48px solid transparent;
-    border-bottom: 34px solid #fff;
+    border-left: 44px solid transparent;
+    border-right: 44px solid transparent;
+    border-bottom: 40px solid #fff;
   }
   .clock {
     margin-top: -38px;
@@ -64,7 +64,7 @@
   }
   // 题目
   .question {
-    margin: 40px 0 10px;
+    margin: 30px 0 10px;
     width: 75%;
     text-align: center;
     color: #444;
