--- a/src/pages/Countdown/style.scss
+++ b/src/pages/Countdown/style.scss
@@ -1,7 +1,7 @@
 .main {
   width: 100%;
   height: 100vh;
-  background: #fff url("../../assets/countdown/countdown-background.png") no-repeat center center;
+  background: #f6f5f5 url("../../assets/countdown/countdown-background.png") no-repeat center center;
   background-size: 100% 100%;
   display: flex;
   flex-direction: column;
@@ -12,10 +12,10 @@
   }
   // 进出动画
   .scale-fade-enter-active {
-    transition: all 1s;
+    transition: all .6s;
   }
  .scale-fade-leave-active {
-   transition: all .5s;
+   transition: all .2s;
  }
   .scale-fade-enter {
     transform: scale(.3);
