fix: change back to the original layout

--- a/src/pages/HomePage/style.scss
+++ b/src/pages/HomePage/style.scss
@@ -46,7 +46,7 @@
     align-items: center;
     position: relative;
     width: 88%;
-    height: 400px;
+    height: 60vh;
     margin: auto;
     background-color: #fff;
     border-radius: 8px;
@@ -171,7 +171,7 @@
     position: absolute;
     left: 50%;
     transform: translateX(-50%);
-    bottom: 14px;
+    bottom: 3vh;
     color: #fff;
     font-size: 12px;
     display: flex;
