--- a/src/components/SharePage/style.scss
+++ b/src/components/SharePage/style.scss
@@ -22,7 +22,8 @@
 // 分享规则
 .rules {
   margin: 16px 20px;
-  padding: 10px 14px 10px 30px;
+  padding: 10px 16px;
+  list-style-position: inside;
   background-color: #f6f6f6;
   color: #333;
   border-radius: 6px;
